update for more containers

--- a/estilo.css
+++ b/estilo.css
@@ -28,7 +28,7 @@
     border-radius: 10px; /* Borda arredondada */
     width: 80%;
     max-width: 800px; /* Defina um valor máximo para a largura */
-    max-height: 600px;
+    margin: 20px 0px 20px 0px;
 }
 
 .filha {
