--- a/estilo.css
+++ b/estilo.css
@@ -15,6 +15,13 @@
     min-height: 100vh;
 }
 
+h1{
+    color: #fff;
+}
+
+p{
+    color: #fff;
+}
 .div-container {
     background-image: url('./img/cripto.jpg');
     background-size: cover;
@@ -29,6 +36,24 @@
     width: 80%;
     max-width: 800px; /* Defina um valor máximo para a largura */
     margin: 20px 0px 20px 0px;
+}
+
+.div-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 35px; /* Espaçamento interno para as divs filhas */
+    border-radius: 10px; /* Borda arredondada */
+    width: 80%;
+    max-width: 800px; /* Defina um valor máximo para a largura */
+    margin: 20px 0px 20px 0px;font-family: Arial, sans-serif; 
+    font-size: 16px; 
+    background-color: #e67e22;
+    background-repeat: no-repeat;
+    color: white; /* Cor do texto */
+    overflow-y: auto; /* Barra de rolagem horizontal */
+    text-align: center;
 }
 
 .filha {
@@ -47,8 +72,10 @@
     background-size: auto 100%; /* A imagem de fundo se ajusta verticalmente e rola horizontalmente */
     background-repeat: no-repeat;
     color: white; /* Cor do texto */
-    overflow-y: auto /* Barra de rolagem horizontal */
-   
+    overflow-y: auto; /* Barra de rolagem horizontal */
+    text-align: center;
+    max-width: 800px;
+    
 }
 
 /* Estilo para a barra de rolagem vertical transparente */
